.BAT  Y .SH para ejecuion configuracion mediante .env sin docker